--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css"/>
   </head>
 
@@ -10,9 +11,8 @@
     <header class="main-header">
       <a class="main-header__logo" href="#">
         <img class="main-header__logo-image" src="#" width="" height="" alt="Логотип Кэт энерджи">
+        <img class="main-header__company-image company-logo" src="#" width="" height="" alt="Имя компании">
       </a>
-
-      <img class="main-header__company-image company-logo" src="#" width="" height="" alt="Имя компании">
 
       <nav class="main-header__navigation navigation">
         <button class="navigation__toggle">
@@ -106,8 +106,10 @@
 
       <section class="main-container__example example">
         <div class="example__wrapper">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          <div class="example__wrapper-description">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          </div>
 
           <div class="example__parametrs parametrs">
             <ul class="parametrs__list">
@@ -121,11 +123,11 @@
                 <p class="parametrs__info-description">затрачено времени</p>
               </li>
             </ul>
+            <p class="example__cost">Затраты на питание: 15 000 РУБ. </p>
           </div>
 
-          <p class="example__cost">Затраты на питание: 15 000 РУБ. </p>
-          <img class="example__cat-image" src="img/index-cat.png" width="280" height="232" alt="Котик до/после">
-          <div class="range">
+          <div class="example__range range">
+            <img class="example__cat-image" src="img/index-cat.png" width="280" height="232" alt="Котик до/после">
             <p class="range__changes">Было</p>
             <div class="range__scale">
               <div class="range__bar">
@@ -142,39 +144,43 @@
 
     <footer class="main-footer">
       <div class="main-footer__wrapper">
-        <div class="main-footer__cooperation cooperation">
-          <div class="cooperation__info cooperation__info--index">
+        <div class="main-footer__cooperation cooperation cooperation--index">
+          <div class="cooperation__info">
             <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
             <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
+          <!-- Здесь будет карта-->
         </div>
 
-        <div class="main-footer__company company">
-          <img class="company__image company-logo" src="#" width="" height="" alt="Имя компании">
+        <div class="main-footer__wrapper-link">
+          <div class="main-footer__company company">
+            <img class="company__image company-logo" src="#" width="" height="" alt="Имя компании">
+          </div>
+
+          <div class="main-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vk" href="#"></a>
+              </li>
+
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="#"></a>
+              </li>
+
+              <li class="social__item">
+                <a class="social__link social__link--telegram" href="#"></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="main-footer__html-academy html-academy">
+            <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            <a class="html-academy__logo" href="https://htmlacademy.ru/intensive/adaptive">
+              <img src="#" width="" height="" alt="Логотип HTML-Academy.">
+            </a>
+          </div>
         </div>
 
-        <div class="main-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vk" href="#"></a>
-            </li>
-
-            <li class="social__item">
-              <a class="social__link social__link--youtube" href="#"></a>
-            </li>
-
-            <li class="social__item">
-              <a class="social__link social__link--telegram" href="#"></a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="main-footer__html-academy html-academy">
-          <a class="html-academy__link" href="#">HTML Academy</a>
-          <a class="html-academy__logo" href="#">
-            <img src="#" width="" height="" alt="Логотип HTML-Academy.">
-          </a>
-        </div>
       </div>
     </footer>
   </body>
