Декоративные элементы главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -213,13 +213,15 @@
             </li>
           </ul>
         </div>
-      </section>
 
-      <section class="main-container__present present">
-        <h2 class="visually-hidden">Подарки.</h2>
-        <div class="present__wrapper">
-          <svg class="present__icon" aria-label="Иконка подарка."></svg>
-          <p class="present__description">Закажите все и получите чехол для кота в подарок!</p>
+
+
+        <div class="catalog-edditional__present present">
+          <h2 class="visually-hidden">Подарки.</h2>
+          <div class="present__wrapper">
+            <svg class="present__icon" aria-label="Иконка подарка."></svg>
+            <p class="present__description">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
         </div>
       </section>
     </main>
