--- a/5/index.html
+++ b/5/index.html
@@ -12,10 +12,12 @@
     <header class="main-header">
       <a class="main-header__logo" href="#">
         <img class="main-header__logo-image" src="img/mobile-logo.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+      </a>
+      <a class="main-header__name-logo" href="">
         <img class="main-header__company-image company-logo" src="img/mobile-logo-name.svg" width="101" height="18" alt="Имя компании">
       </a>
 
-      <nav class="main-header__navigation navigation navigation--opened <!--navigation--closed--> navigation--nojs">
+      <nav class="main-header__navigation navigation <!--navigation--opened--> navigation--closed <--navigation--nojs-->">
         <button class="navigation__toggle">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -23,13 +25,13 @@
         <div class="navigation__wrapper">
           <ul class="navigation__list site-list">
             <li class="site-list__item">
-              <a class="site-list__link site-list__link--current" href="#">Главная</a>
+              <a class="site-list__link site-list__link--current site-list__link--index" href="#">Главная</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+              <a class="site-list__link site-list__link--index" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Подбор программы</a>
+              <a class="site-list__link site-list__link--index" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -46,7 +48,7 @@
             <a class="functional-food__button button" href="#">Подобрать программу</a>
           </header>
 
-          <img class="functional-food__feed-image" src="img/index-feed.png" width="280" height="270" alt="Корм для котиков">
+          <img class="functional-food__feed-image" src="img/index-feed-mobile.png" width="280" height="270" alt="Корм для котиков">
 
         </div>
       </section>
@@ -75,30 +77,22 @@
           <h2 class="program-info__title">Как это работает</h2>
           <ol class="program-info__list">
             <li class="program-info__item">
-              <div class="program-info__block-icon program-info__block-icon--leaf">
-                <span class="visually-hidden">Листик.</span>
-              </div>
+              <div class="program-info__block-icon program-info__block-icon--leaf"></div>
               <p class="program-info__description">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
 
             <li class="program-info__item">
-              <div class="program-info__block-icon program-info__block-icon--water">
-                <span class="visually-hidden">Вода.</span>
-              </div>
+              <div class="program-info__block-icon program-info__block-icon--water"></div>
               <p class="program-info__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
 
             <li class="program-info__item">
-              <div class="program-info__block-icon program-info__block-icon--fork">
-                <span class="visually-hidden">Приборы.</span>
-              </div>
+              <div class="program-info__block-icon program-info__block-icon--fork"></div>
               <p class="program-info__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
 
             <li class="program-info__item">
-              <div class="program-info__block-icon  program-info__block-icon--alarm">
-                <span class="visually-hidden">Часы.</span>
-              </div>
+              <div class="program-info__block-icon  program-info__block-icon--alarm"></div>
               <p class="program-info__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ol>
@@ -124,7 +118,12 @@
                 <p class="parametrs__info-description">затрачено времени</p>
               </li>
             </ul>
-            <p class="example__cost">Затраты на питание: 15 000 РУБ. </p>
+
+            <dl class="example__cost">
+              <dt class="example__cost-description">Затраты на питание:</dt>
+              <dd class="example__cost-price">15 000 РУБ.</dd>
+            </dl>
+            <!--<p class="example__cost">Затраты на питание: 15 000 РУБ. </p> -->
           </div>
 
           <div class="example__range range">
@@ -152,15 +151,15 @@
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
-          class="cooperation_maps"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
-          width="100%"
-          height="450"
-          style="border:0;"
-          allowfullscreen=""
-          title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-          >
-        </iframe>
+            class="cooperation_maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
+            width="100%"
+            height="450"
+            style="border:0;"
+            allowfullscreen=""
+            title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
+            >
+          </iframe>
           <!-- Здесь будет карта-->
         </div>
 
