--- a/source/form.html
+++ b/source/form.html
@@ -10,10 +10,14 @@
     <header class="main-header">
       <div class="main-header__wrapper <!--main-header__wrapper-nojs-->">
         <div class="main-header__wrapper-logo">
-          <a class="main-header__logo" href="#">
-            <img class="main-header__logo-image" src="img/mobile-logo.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+          <a class="main-header__logo" href="index.html">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи.">
+            </picture>
           </a>
-          <a class="main-header__name-logo" href="">
+          <a class="main-header__name-logo" href="index.html">
             <img class="main-header__company-image company-logo" src="img/mobile-logo-name.svg" width="101" height="18" alt="Имя компании">
           </a>
         </div>
@@ -50,7 +54,7 @@
 
             <div class="select-program__wrapper-info">
               <fieldset class="select-program__form-info form-info">
-                <legend class="visually-hidden"> Информация о котике.</legend>
+                <h2 class="visually-hidden"> Информация о котике.</h2>
                 <ul class="form-info__list">
                   <li class="form-info__item">
                     <p class="form-info__parameter form-info__parameter--required">Имя:*</p>
@@ -73,7 +77,7 @@
               </fieldset>
 
               <fieldset class="select-program__form-radio form-radio">
-                <legend class="visually-hidden">Цель.</legend>
+                <h2 class="visually-hidden">Цель.</h2>
                 <ul class="form-radio__list">
                   <li class="form-radio__item">
                     <label class="form-radio__control">
@@ -103,7 +107,7 @@
             </div>
 
             <fieldset class="select-program__form-contacts form-contacts">
-              <legend class="form-contacts__title">Контактные данные (владельца кота)</legend>
+              <h2 class="form-contacts__title">Контактные данные (владельца кота)</h2>
               <ul class="form-contacts__list">
                 <li class="form-contacts__item">
                   <p class="form-contacts__parameter form-contacts__parameter--email form-contacts__parameter--required">E-mail:*</p>
@@ -120,13 +124,13 @@
             </fieldset>
 
             <fieldset class="select-program__form-comment form-comment">
-              <legend class="form-comment__title">Комментарий</legend>
+              <h2 class="form-comment__title">Комментарий</h2>
               <label class="visually-hidden" for="comment">Комментарий.</label>
               <textarea class="form-comment__text-area" placeholder="Расскажите обо всех повАдках кота" id="comment" name="comment"></textarea>
             </fieldset>
 
             <fieldset class="select-program__form-checkbox form-checkbox">
-              <legend class="form-checkbox__title">Дополнительно</legend>
+              <h2 class="form-checkbox__title">Дополнительно</h2>
 
               <ul class="form-checkbox__list">
                 <li class="form-checkbox__item">
@@ -177,7 +181,7 @@
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
-            class="cooperation_maps"
+            class="cooperation__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
             width="100%"
             height="450"
