--- a/source/index.html
+++ b/source/index.html
@@ -5,17 +5,25 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+    <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml"> <!-- 16×16 -->
+    <link rel="apple-touch-icon" href="img/favicons/favicon-apple.png"> <!-- 180×180 -->
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
 
   <body class="page__body">
     <header class="main-header">
       <div class="main-header__wrapper <!--main-header__wrapper-nojs-->">
         <div class="main-header__wrapper-logo">
-          <a class="main-header__logo" href="#">
-            <img class="main-header__logo-image" src="img/mobile-logo.svg" width="33" height="38" alt="Логотип Кэт энерджи">
+          <a class="main-header__logo" href="index.html">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Логотип Кэт энерджи.">
+            </picture>
           </a>
-          <a class="main-header__name-logo" href="">
-            <img class="main-header__company-image company-logo" src="img/mobile-logo-name.svg" width="101" height="18" alt="Имя компании">
+          <a class="main-header__name-logo" href="index.html">
+            <img class="main-header__company-image company-logo" src="img/mobile-logo-name.svg" width="101" height="18" alt="Имя компании.">
           </a>
         </div>
 
@@ -48,11 +56,14 @@
           <header class="functional-food__header">
             <h2 class="functional-food__title">Функциональное питание для котов</h2>
             <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
-            <a class="functional-food__button button" href="#">Подобрать программу</a>
+            <a class="functional-food__button button" href="form.html">Подобрать программу</a>
           </header>
 
-          <img class="functional-food__feed-image" src="img/index-feed-mobile.png" width="280" height="270" alt="Корм для котиков">
-
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/index-feed-desktop.png 1x, img/index-feed-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-feed-tablet.png 1x, img/index-feed-tablet@2x.png 2x">
+            <img class="functional-food__feed-image" src="img/index-feed-mobile.png" srcset="img/index-feed-mobile@2x.png 2x" width="280" height="270" alt="Корм для котиков.">
+          </picture>
         </div>
       </section>
 
@@ -154,7 +165,7 @@
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
-            class="cooperation_maps"
+            class="cooperation__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
             width="100%"
             height="450"
@@ -201,7 +212,7 @@
 
           <div class="main-footer__html-academy html-academy">
             <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <span class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</span>
+              <span class="html-academy__link">HTML Academy</span>
               <svg class="html-academy__icon" role="img" aria-label="Логотип академии." aria-hidden="true" focusable="false"  width="27" height="34" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
               </svg>
