--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -31,10 +31,10 @@
           <div class="navigation__wrapper">
             <ul class="navigation__list site-list">
               <li class="site-list__item">
-                <a class="site-list__link site-list__link--current-index" href="index.html">Главная</a>
+                <a class="site-list__link" href="index.html">Главная</a>
               </li>
               <li class="site-list__item">
-                <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+                <a class="site-list__link site-list__link--current" href="catalog.html">Каталог продукции</a>
               </li>
               <li class="site-list__item">
                 <a class="site-list__link" href="form.html">Подбор программы</a>
@@ -53,8 +53,15 @@
           <ul class="catalog__product-list product-list">
             <li class="product-list__item product">
               <div class="product__wrapper">
-                <img class="product__picture product__picture--image" src="img/catalog-chiken-small-mobile.png" width="" height="" alt="Куринный корм 500 грамм.">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/catalog/catalog-1-desktop.webp 1x, img/img/catalog/catalog-1-desktop@2x.webp 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/catalog-1-tablet.webp 1x, img/catalog-1-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/catalog/catalog-1-mobile.webp 1x, img/catalog-1-mobile.webp 2x">
 
+                  <source media="(min-width: 1440px)" srcset="img/catalog/catalog-1-desktop.png 1x, img/catalog-1-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/catalog/catalog-1-tablet.png 1x, img/catalog-1-tablet@2x.png 2x">
+                  <img class="example__cat-image" src="img/catalog/catalog-1-mobile.png" srcset="img/catalog-1-mobile@2x.png 2x" alt="Куринный корм 500 грамм.">
+                </picture>
                 <h3 class="product__name">Cat Energy PRO 500 г</h3>
 
                 <dl class="product__detail">
@@ -399,6 +406,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
