--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -31,13 +31,13 @@
           <div class="navigation__wrapper">
             <ul class="navigation__list site-list">
               <li class="site-list__item">
-                <a class="site-list__link site-list__link--current-index" href="index.html">Главная</a>
+                <a class="site-list__link" href="index.html">Главная</a>
               </li>
               <li class="site-list__item">
                 <a class="site-list__link" href="catalog.html">Каталог продукции</a>
               </li>
               <li class="site-list__item">
-                <a class="site-list__link" href="form.html">Подбор программы</a>
+                <a class="site-list__link site-list__link--current" href="form.html">Подбор программы</a>
               </li>
             </ul>
           </div>
@@ -258,6 +258,6 @@
 
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
