--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
     <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml"> <!-- 16×16 -->
     <link rel="apple-touch-icon" href="img/favicons/favicon-apple.png"> <!-- 180×180 -->
@@ -79,13 +79,10 @@
           <ul class="programs-food__list programs-list">
             <li class="programs-list__item programs-list__item--cat-small">
               <h3 class="programs-list__name">похудение</h3>
-              <svg class="programs-list__icon programs-list__icon--small" width="36" height="50" aria-label="Худой кот">
-                <use href="img/sprite.svg#cat-small"></use>
-              </svg>
               <p class="programs-list__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="programs-list__catalog-link" href="#">
                 <span>каталог slim</span>
-                <svg class="programs-list__arrow-icon" width="24" height="12" aria-label="Перейти в каталог">
+                <svg class="programs-list__arrow-icon" width="32" height="15" aria-label="Перейти в каталог">
                   <use href="img/sprite.svg#arrow"></use>
                 </svg>
               </a>
@@ -93,12 +90,9 @@
 
             <li class="programs-list__item programs-list__item--cat-big">
               <h3 class="programs-list__name">набор массы</h3>
-              <svg class="programs-list__icon programs-list__icon--big" width="67" height="28" aria-label="Полный кот">
-                <use href="img/sprite.svg#cat-big"></use>
-              </svg>
               <p class="programs-list__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="programs-list__catalog-link" href="#">
-                <span>каталог slim</span>
+                <span>каталог pro</span>
                 <svg class="programs-list__arrow-icon" width="24" height="12" aria-label="Перейти в каталог">
                   <use href="img/sprite.svg#arrow"></use>
                 </svg>
@@ -129,7 +123,7 @@
 
             <li class="program-info__item">
               <div class="program-info__block-icon program-info__block-icon--alarm"></div>
-              <p class="program-info__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              <p class="program-info__description">Уже через месяц наслаждайтесь изменениями к лучшему &nbsp; <br> вашего питомца!</p>
             </li>
           </ol>
         </div>
@@ -163,16 +157,19 @@
           </div>
 
           <div class="example__range range">
-            <img class="example__cat-image" src="img/index-cat.png" width="280" height="232" alt="Котик до/после">
-            <p class="range__changes">Было</p>
-            <div class="range__scale">
-              <div class="range__bar">
-                <button class="range__toggle" type="button">
-                  <span class="visually-hidden">Изменить изображение.</span>
-                </button>
-              </div>
-            </div>
-            <p class="range__changes">Стало</p>
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
+              <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
+              <source type="image/webp" srcset="img/viewport-mobile-state-after.webp 1x, img/viewport-mobile-state-after@2x.webp 2x">
+
+              <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
+              <img class="example__cat-image" src="img/viewport-mobile-state-after.png" srcset="img/viewport-mobile-state-after@2x.png 2x" alt="Котик до/после.">
+            </picture>
+
+            <svg class="example__thumb" width="40" height="40" aria-label="Посмотреть разницу.">
+              <use href="img/sprite.svg#thumb"></use>
+            </svg>
           </div>
         </div>
       </section>
@@ -182,19 +179,19 @@
       <div class="main-footer__wrapper">
         <div class="main-footer__cooperation cooperation cooperation--index">
           <div class="cooperation__info">
-            <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
-            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+            <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
+            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <br> Санкт-Петербург</address>
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
             class="cooperation__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
-            width="100%"
-            height="450"
+            width="320px"
+            height="362px"
             style="border:0;"
             allowfullscreen=""
             title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-            >
+          >
           </iframe>
           <!-- Здесь будет карта-->
         </div>
@@ -250,6 +247,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
