Улучшение скорости загрузки

--- a/source/index.html
+++ b/source/index.html
@@ -9,13 +9,17 @@
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml"> <!-- 16×16 -->
     <link rel="apple-touch-icon" href="img/favicons/favicon-apple.png"> <!-- 180×180 -->
     <link rel="manifest" href="manifest.webmanifest">
+
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="preload" href="/fonts/oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/oswaldregular.woff2" as="font" crossorigin="anonymous">
   </head>
 
   <body class="page__body">
 
     <header class="main-header">
       <!-- Для реализации без script.js раскомментировать класс "main-header__wrapper-nojs" -->
-      <div class="main-header__wrapper <!--main-header__wrapper-nojs-->">
+      <div class="main-header__wrapper main-header__wrapper-nojs">
         <div class="main-header__wrapper-logo">
           <a class="main-header__logo" href="index.html">
             <picture>
@@ -157,15 +161,35 @@
           </div>
 
           <div class="example__range range">
-            <picture>
-              <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
-              <source type="image/webp" srcset="img/viewport-mobile-state-after.webp 1x, img/viewport-mobile-state-after@2x.webp 2x">
+            <ul class="range__list">
+              <li class="range__item-picture range__item range__item--before">
+                <div class="range__box range__box--before">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-before.webp 1x, img/viewport-tablet-state-before@2x.webp 2x">
+                    <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-before.webp 1x, img/viewport-tablet-state-before@2x.webp 2x">
+                    <source type="image/webp" srcset="img/viewport-mobile-state-before.webp 1x, img/viewport-mobile-state-before@2x.webp 2x">
 
-              <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
-              <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
-              <img class="example__cat-image" src="img/viewport-mobile-state-after.png" srcset="img/viewport-mobile-state-after@2x.png 2x" alt="Котик до/после.">
-            </picture>
+                    <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-before.png 1x, img/viewport-tablet-state-before@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-before.png 1x, img/viewport-tablet-state-before@2x.png 2x">
+                    <img class="range__cat-image" width="280" height="256" src="img/viewport-mobile-state-before.png" srcset="img/viewport-mobile-state-before@2x.png 2x" alt="Котик до/после.">
+                  </picture>
+                </div>
+              </li>
+
+              <li class="range__item-picture range__item range__item--after range__item--current">
+                <div class="range__box range__box--after">
+                  <picture>
+                    <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
+                    <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.webp 1x, img/viewport-tablet-state-after@2x.webp 2x">
+                    <source type="image/webp" srcset="img/viewport-mobile-state-after.webp 1x, img/viewport-mobile-state-after@2x.webp 2x">
+
+                    <source media="(min-width: 1440px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/viewport-tablet-state-after.png 1x, img/viewport-tablet-state-after@2x.png 2x">
+                    <img class="range__cat-image" width="280" height="256" src="img/viewport-mobile-state-after.png" srcset="img/viewport-mobile-state-after@2x.png 2x" alt="Котик до/после.">
+                  </picture>
+                </div>
+              </li>
+            </ul>
 
             <svg class="example__thumb" width="40" height="40" aria-label="Посмотреть разницу.">
               <use href="img/sprite.svg#thumb"></use>
@@ -180,14 +204,14 @@
         <div class="main-footer__cooperation cooperation cooperation--index">
           <div class="cooperation__info">
             <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
-            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <br> Санкт-Петербург</address>
+            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <br> <span class="cooperation__address-city">Санкт-Петербург</span></address>
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
             class="cooperation__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
-            width="320px"
-            height="362px"
+            width="320"
+            height="362"
             style="border:0;"
             allowfullscreen=""
             title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
@@ -199,7 +223,7 @@
         <div class="main-footer__wrapper-link">
           <div class="main-footer__company company">
             <a class="company__link" href="#">
-              <svg class="company__icon" width="128" height="24" aria-label="Логотип Cat Energy">
+              <svg class="company__icon" width="128" height="24" aria-label="Логотип Cat Energy.">
                 <use href="img/sprite.svg#footer-logo"></use>
               </svg>
             </a>
@@ -209,7 +233,7 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vk" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Вк">
+                  <svg class="social__icon" width="28" height="22" aria-label="Вк.">
                     <use href="img/sprite.svg#vk"></use>
                   </svg>
                 </a>
@@ -217,7 +241,7 @@
 
               <li class="social__item">
                 <a class="social__link social__link--youtube" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Ютуб">
+                  <svg class="social__icon" width="28" height="22" aria-label="Ютуб.">
                     <use href="img/sprite.svg#youtube"></use>
                   </svg>
 
@@ -226,7 +250,7 @@
 
               <li class="social__item">
                 <a class="social__link social__link--telegram" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Телеграм">
+                  <svg class="social__icon" width="28" height="22" aria-label="Телеграм.">
                     <use href="img/sprite.svg#telegram"></use>
                   </svg>
                 </a>
@@ -237,7 +261,7 @@
           <div class="main-footer__html-academy html-academy">
             <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
               <span class="html-academy__link">HTML Academy</span>
-              <svg class="html-academy__icon" width="27" height="34" aria-label="Логотип HTML Academy">
+              <svg class="html-academy__icon" width="27" height="34" aria-label="Логотип HTML Academy.">
                 <use href="img/sprite.svg#html-academy-logo"></use>
               </svg>
             </a>
