--- a/source/form.html
+++ b/source/form.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.min.css"/>
   </head>
   <body class="page__body">
-    <header class="main-header">
+    <header class="main-header main-header--form">
       <!-- Для реализации без script.js раскомментировать класс "main-header__wrapper-nojs" -->
-      <div class="main-header__wrapper <!--main-header__wrapper-nojs-->">
+      <div class="main-header__wrapper main-header__wrapper-nojs">
         <div class="main-header__wrapper-logo">
           <a class="main-header__logo" href="index.html">
             <picture>
@@ -115,7 +115,7 @@
                   <label class="visually-hidden" for="email">Электронная почта.</label>
                   <div class="form-contacts__input-wrapper">
                     <input class="form-contacts__input form-contacts__input--email" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required/>
-                    <svg class="form-contacts__icon form-contacts__icon--email" width="19" height="14" aria-label="Почта">
+                    <svg class="form-contacts__icon form-contacts__icon--email" width="19" height="14" aria-label="Почта.">
                       <use href="img/sprite.svg#email"></use>
                     </svg>
                   </div>
@@ -126,7 +126,7 @@
                   <label class="visually-hidden" for="phone">Телефон.</label>
                   <div class="form-contacts__input-wrapper">
                     <input class="form-contacts__input form-contacts__input--phone" type="tel" id="phone" name="phone" placeholder="8 (960) 900-60-90" required/>
-                    <svg class="form-contacts__icon form-contacts__icon--phone" width="20" height="21" aria-label="Телефон">
+                    <svg class="form-contacts__icon form-contacts__icon--phone" width="20" height="21" aria-label="Телефон.">
                       <use href="img/sprite.svg#phone"></use>
                     </svg>
                   </div>
@@ -191,14 +191,14 @@
       <div class="main-footer__wrapper">
         <div class="main-footer__cooperation cooperation">
           <div class="cooperation__info">
-            <h2 class="cooperation__title">приглашаем к сотрудничеству дилеров!</h2>
-            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+            <h2 class="cooperation__title">приглашаем <br> к сотрудничеству дилеров!</h2>
+            <address class="cooperation__address">ул. Большая Конюшенная, д. 19/8 <br> <span class="cooperation__address-city">Санкт-Петербург</span></address>
           </div>
           <h2 class="visually-hidden">Как до нас добраться.</h2>
           <iframe
             class="cooperation__maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8226084133137!2d30.315220216071793!3d59.96826598188698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1660547601513!5m2!1sru!2sru"
-            width="100%"
+            width="320"
             height="450"
             style="border:0;"
             allowfullscreen=""
@@ -211,7 +211,7 @@
         <div class="main-footer__wrapper-link">
           <div class="main-footer__company company">
             <a class="company__link" href="#">
-              <svg class="company__icon" width="128" height="24" aria-label="Логотип Cat Energy">
+              <svg class="company__icon" width="128" height="24" aria-label="Логотип Cat Energy.">
                 <use href="img/sprite.svg#footer-logo"></use>
               </svg>
             </a>
@@ -221,7 +221,7 @@
             <ul class="social__list">
               <li class="social__item">
                 <a class="social__link social__link--vk" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Вк">
+                  <svg class="social__icon" width="28" height="22" aria-label="Вк.">
                     <use href="img/sprite.svg#vk"></use>
                   </svg>
                 </a>
@@ -229,7 +229,7 @@
 
               <li class="social__item">
                 <a class="social__link social__link--youtube" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Ютуб">
+                  <svg class="social__icon" width="28" height="22" aria-label="Ютуб.">
                     <use href="img/sprite.svg#youtube"></use>
                   </svg>
 
@@ -238,7 +238,7 @@
 
               <li class="social__item">
                 <a class="social__link social__link--telegram" href="#">
-                  <svg class="social__icon" width="28" height="22" aria-label="Телеграм">
+                  <svg class="social__icon" width="28" height="22" aria-label="Телеграм.">
                     <use href="img/sprite.svg#telegram"></use>
                   </svg>
                 </a>
@@ -249,7 +249,7 @@
           <div class="main-footer__html-academy html-academy">
             <a class="html-academy__link" href="https://htmlacademy.ru/intensive/adaptive">
               <span class="html-academy__link">HTML Academy</span>
-              <svg class="html-academy__icon" width="27" height="34" aria-label="Логотип HTML Academy">
+              <svg class="html-academy__icon" width="27" height="34" aria-label="Логотип HTML Academy.">
                 <use href="img/sprite.svg#html-academy-logo"></use>
               </svg>
             </a>
