--- a/source/catalog.html
+++ b/source/catalog.html
@@ -92,7 +92,7 @@
 
             <li class="product-list__item product">
               <div class="product__wrapper">
-                <div class="product__image-wrapper product__image-wrapper--big">
+                <div class="product__image-wrapper">
                   <picture>
                     <source media="(min-width: 1440px)" srcset="img/catalog/catalog-2-desktop.webp 1x, img/catalog/catalog-2-desktop@2x.webp 2x">
                     <source media="(min-width: 768px)" srcset="img/catalog/catalog-2-tablet.webp 1x, img/catalog/catalog-2-tablet@2x.webp 2x">
