--- a/source/index.html
+++ b/source/index.html
@@ -86,7 +86,7 @@
               <p class="programs-list__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="programs-list__catalog-link" href="#">
                 <span>каталог slim</span>
-                <svg class="programs-list__arrow-icon" width="32" height="15" aria-label="Перейти в каталог">
+                <svg class="programs-list__arrow-icon programs-list__arrow-icon--small" width="32" height="15" aria-label="Перейти в каталог">
                   <use href="img/sprite.svg#arrow"></use>
                 </svg>
               </a>
@@ -97,7 +97,7 @@
               <p class="programs-list__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="programs-list__catalog-link" href="#">
                 <span>каталог pro</span>
-                <svg class="programs-list__arrow-icon" width="24" height="12" aria-label="Перейти в каталог">
+                <svg class="programs-list__arrow-icon programs-list__arrow-icon--big" width="24" height="12" aria-label="Перейти в каталог">
                   <use href="img/sprite.svg#arrow"></use>
                 </svg>
               </a>
@@ -157,7 +157,6 @@
               <dt class="example__cost-description">Затраты на питание:</dt>
               <dd class="example__cost-price">15 000 РУБ.</dd>
             </dl>
-            <!--<p class="example__cost">Затраты на питание: 15 000 РУБ. </p> -->
           </div>
 
           <div class="example__range range">
@@ -190,10 +189,14 @@
                 </div>
               </li>
             </ul>
-
-            <svg class="example__thumb" width="40" height="40" aria-label="Посмотреть разницу.">
-              <use href="img/sprite.svg#thumb"></use>
-            </svg>
+            <button class="example__button" type="button">
+              <svg class="example__thumb" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect x="1" y="1" width="38" height="38" rx="19" fill="white"/>
+                <path d="M16 11L8 20L16 29V11Z" fill="#666666"/>
+                <path d="M32 20L24 11V29L32 20Z" fill="#666666"/>
+                <rect x="1" y="1" width="38" height="38" rx="19" stroke="#666666" stroke-width="2"/>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
