--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
           </button>
 
           <div class="navigation__wrapper">
-            <ul class="navigation__list site-list">
+            <ul class="navigation__list navigation__list--index site-list">
               <li class="site-list__item">
                 <a class="site-list__link site-list__link--current-index site-list__link--index" href="index.html">Главная</a>
               </li>
@@ -190,6 +190,7 @@
               </li>
             </ul>
             <button class="example__button" type="button">
+              <span class="visually-hidden">Посмотреть разницу.</span>
               <svg class="example__thumb" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="1" y="1" width="38" height="38" rx="19" fill="white"/>
                 <path d="M16 11L8 20L16 29V11Z" fill="#666666"/>
